--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+      }
+    </style>
+    <title>Web App</title>
   </head>
   <body>
     <div id="root"></div>
