--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <title>React App</title>
     <style>
-      body {
+      html, body {
         margin: 0;
-        padding: 0;
-        font-family: sans-serif;
+      }
+      * {
+        box-sizing: border-box;
       }
     </style>
-    <title>Web App</title>
   </head>
   <body>
     <div id="root"></div>
