--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <style>
-      html, body {
-        margin: 0;
-      }
-      * {
-        box-sizing: border-box;
-      }
-    </style>
+    <title>Sound Dive</title>
   </head>
   <body>
     <div id="root"></div>
